--- a/README
+++ b/README
@@ -3,4 +3,6 @@ Trivia
 
 This project's purpose is to get the hang of node.js.
 
+We will try to build the application with the express framework and with
+socket.io to enable websockets.
 
